--- a/Sales and Inventory System/Forms/Manager/MAccounts.resx
+++ b/Sales and Inventory System/Forms/Manager/MAccounts.resx
@@ -117,4 +117,199 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="Guna2PictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAwYSURBVHhe7Z17
+        0HVTHcfR/aIkhVySilLoTpSJypRuklsogxgyg6YaozQpyqUbueSWjCkVLyqht1wqKYVIhkoZkop0U+ne
+        p/nO+3vMme97zl7rnLPXOfu8Z31mnr+e9dtr7bXP3mut33W55WYM4MHAC4ADgBOBxcBPgN8Cf2YJfwV+
+        B9wKXA6cBhwMbAE83K9Z6TjAo4BdgQuB++Ihj8o/gG8C+wOreF+VDgGsF2+v3ugS/As4H9jU+65MEeDp
+        wDnAf/2JFURLRf0hTBPgobFW/92fzoT4H3AW8AQfW6UwwIbALf5EpoQ2lK/0MVYKAewJ3O9PYcpo+fkg
+        8CAfb6UlgOWBo33mh0CbuJuBrwCnAEf1/J0ELAKuB/7mgkNwXj06FiDO82f4bGdwO3AksBXwSL9uP4CH
+        aIMHHALc6BfM4ArgMX7dyojEm6/N1jBI4aOHvrxfb1iA5wCfA/7jnTTw3dwfXCUB8HGf3QZuADb3a7QB
+        sD7wde+wgYv0NfHrVIYAOMhndQD/Bt6jpcKv0TbAbkNoGE9z+UomsQ5r45biN8BLXb4k8TW4yQcygLe6
+        fCUB8LjYwKX4BfBUl58EwErAlT6gPkg1/UyXrzQAnOyz2IefAau77CQBHgFc5gPrg34oY29I5wLghRl6
+        /buAdVx2GgArAtf6APtQl4IcgKt95gzp/p/nctMEWC32Ik1IZVyPhk0Ar/BZ68N+LtcFgC0zdAUHuFyl
+        h4z1VM4ZnV1LgeN8wMadsmK6XGXJ5D3DZ8uQd856LtclpAIGfu0DN97kcpUlk3e4z5Rxsst0EeBAH7ix
+        yGUqSyZOZ/pBaG2dynl/WLTRA+7xG+hBm9jHutxcE/58TXzNZbpMhv3i9S4z1wB7+QwZM3WGDl1GEx9z
+        mbkG+IzPUA/yvZspl+wwYevcP4hrXGauAX7gM9TDTd5+FgDO9RvpQV5HnT3OThzgDz5DPZzp7WcB4N1+
+        I8aTXGYuCctfE+9zmVkA2M5vxHiJy8wlOt75zBhvcZlZQPYKvxGjngQEsLHPjLGty8wCEbHUxC4uM5cA
+        m/nMGFu7zCwgXwW/EWMfl5lLgE18ZoxXucwsAKzlN2Ls6TJzCfAsnxljJo0ncgPzGzF2dJm5BHiyz4wx
+        k59K7fL9RoxtXGYuAR6WcAE7ymVmAWB3vxHjuS4ztwB3+Oz08CVvPwsAH/IbMWr42AIJT6C7Z1FtGt5L
+        g7jb2881wEd8howNXKbLhLt4U+KKi11mrpFWzGfImCl1MLCD34BxsMvMNWEPaNoIKrXbzCwDkUyqiZpf
+        yIm4+iZm4tgErBvBqoOQ02jNJOJkeAV9x2W6SKSqa6J6A/Ujgi1T6Vl2crkuEckkmt5+0amopk4BHO+z
+        ZSgmsJMetfqsA9/zARuXuVylhzCg/NNnzfhyFzeEkSUsxctdrmJkhoa/0+WmCfCaxClGfMvlKn0AVk4E
+        Vgh5Cu/ustMgXMD/4gM0tC/Y2GUrA4hkkCm0VGznspMEeD5wrw+sD3XnPwzhV59SpgiFjO3t8pMgQtlz
+        kkX9SKphl68kiGNhU7xgL8ojOJFJjh+nAkBTm1WhpaHmBxoV2cwz3zJxXekzdjivKP9fDvo6TXWJWibQ
+        0SlyA+SgST+h7aAL6R5kkMpQVPXSyUwmMwmwfWbOwAX0g5FKdvNxdAbAsyNB9Z+8gwSH+rUqYxJn7WHe
+        wAWUb/B0RRiHqnZFv7ZQlm/5HchZE/jkEIkge5EuoOYBKkXEEKjC17jojVa+Hm0y9QNRbKJ0C+MgB5Cd
+        fcyVlgHWlGXQZ3/K6Ef0Ih9rpRBRP+DDQ+4LSrBQN6g6eE6DSC0zTAr3NvnprIatLVOEYuYNGRlG20I5
+        iuW8UmsBdI3QGai6R9vFI7XUSAGkE0J15+o6UT5259AF6FM9Cr+KH9Pes5ajaKaJPHtrhHOl/sauAqLi
+        jqEUUrjWB2Sdi8phXwBOBY4FjoiHrVpDa/k1RiX0C0qCoXt5Yk0V20O4g8uHXg/gqgGZtX4fgSMruXyX
+        iQd+dp8AEamrdWzU5lVeRFsrPtLll1mAFYA3Rv2+HIvaAlIAqYr32F+EkoTd4Jgh7Bfij5Eqb9mNF4gH
+        L0ePn/vdD8kPS1v9RiV+2Klk0Sn0JdzKrz3ThNuUHlxbyMVKRpqJ+ACkiIIRqjzaJnJ+XdP7minijH5o
+        QY3drcDLvN9JEfenr1pTnsNx0P5nJjOkLOx+v+h3VACpY8+Us4aPoSTxVbvcB1MA3d97vf9OE+HR3/A7
+        KYw2XarYsZqPp02AjYALWrAeDstsOJaGoSbXbaoXfUblCPoJ4B3AviNuGLXcaP3ctq0zd+zs94mawKOg
+        snF7REFq+Rro5fDjYQ6H+dg6R5zpc7k/JkQJlZZSscYyolQro+4hFF8ghY/Stq7s128CWDvW93NinKOg
+        H7Ue/FJeSaHwem1cPxVUsoC+Ot31OYhjUA46/+tNz/pcRzbRa/wiI6AvynnRt5I5663Wn742qj0sf8KL
+        M0rA5aBs4bn3J9ez3FOE7Bzdq54SET05Eycd+2YunyL0CHpYqSicaaM52N7HnwOwa6YhSw4xK7j8VAnH
+        iBTfl17eZYch9OrT8gFoQp9xxTWOpbIGNsx8kfZ32akBvNpH1wfZ0cd6+L3EJk+pY7qAspy1lvcvQs5S
+        Xzr9f22XnTihDLneR2dIj7+uy45LLAsy+zZVHCmFjDqyZxTJ+68cyRmbw1NdbuJkFEYQxTN7RG7eowZY
+        FNtE/gWHTULxFJvVJnQ6eorLTYx4+xX82MREM33KVStcxGRdG9cws8At8TA29/5KEo4tKV3I6S43MYDX
+        +WgMnZ9bDdMahviBalOl8/yJkb3ztga9gsarh704TLo7TXudjaWgCd3LGi43EfR2+2iMzqovI/p41XDc
+        WAV4tLfpChlxEIe4THHCvWnQmyR0nl3V5SrDE7kImtAJayltY1GUp8dHYRznMpXRCR1KE0VOIwMBrvUR
+        GBu5TGV0wmG1iRNdphjhZdt0Rr3WZSrjofCzRHT0bS5TDNXy896NA12mMj4Rp9DEei5ThIyBPM1lKuMT
+        xqImJpObIFK2DuJWb19ph4yl9wKXaZ2Iz2/ieJeptEfCL+Iub9868lL1Xo0dXKbSHhHW1kRZV/IwuDSx
+        jstU2iOsn02UTU2XcMa4x9tX2iVU100c4TKtAvzSe+yhVsOaAIlEWYu8fWuEebLJH/4Yl6m0D/Btn/ge
+        fuztWyNclZrYy2Uq7RM5DQahAJmlXOxbIWMDMlmDxJySYYgr4yWU0XE1/06AjEKbZV7ExBlUwR6TtUnP
+        KRlL8Y4u0wrA572nHm739pUyAKv75BsHuUwrAJd6Tz1c7e0rZYgSdU31CY90mVZI1MW7xNtXypFISnGs
+        t28F4AbvqYfzvX2lHAmL7CnevhUSSRfP9vaVciTqKZ3l7VsBuMN76uHT3r5SjkRBi3O8fSskCjqe4O0r
+        5Uj4BVzo7VshEbH6UW9fKUeknRnEpd6+FRJHj8O9faUcCbP8Vd6+FRKRQEd7+0o5Is5xEFd6+1ZIlE+b
+        XpTqHJLYBC729q2QcAYp75FaeYBEGplzvX0rJDYeN3j7ShkUyZzYj5XZkCcSQclfvVbWmADANj75RpkE
+        UrIyeU/GSOnRKsOhN9wn3tjEZVpBxRG9J6OMBqryAGEJVJaTQSgFbSspcpciOr/be+xB69JkAhTnFGAX
+        n3TjIpdpFeBT3qNxSfUMKkOEiDedxMQeLtcqGe5I4l0uVxmPyImo/MNNqPZQ3+rorZJRKEEngre5XGU0
+        4uErkXWKMp5ADvDiRIDIAifNVUm0AkRpPdVRSHEv8HiXLwZwho9gACoWtYXLV5qJt363yK6ew75+jaJE
+        FQ0VbcpF/oRvBzaom8T+RLWVTVUjKCNDaC8XTmVOlSEbuM9Hk4EcS2TOVKqZ46Oc68Fz+KdytTpVqWqI
+        4v1yagU4yhE4VDWUVgG2HLH+TWV87uxEPgbV7ku4KVfa5+ZiMYCjAKwP3OijrBRBVdHGqkxSBB35IoXM
+        MEWhK/noqLenz3vniDQmn024kFXykSfWkZ1865tQrQDg/RlFJSpLo5I0VwD7dTmVfTYqsQK8OSpvfDV8
+        2lQcucnVfB6Q/l4W1utC43d4FOKYnFYvk/8DQN5XsdqGTFsAAAAASUVORK5CYII=
+</value>
+  </data>
+  <data name="Guna2PictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAABFUSURBVHhe7Z0J
+        tHZTHcbJlCFNGkj5kJIMZWhUmhUi6ROJqBYSGlbDWmqVSrJI5qEooZIhypSh0mAqkihESiXRpEmjelrP
+        /Z7Xfe9z37P3Pueevc95772/te5ad927//vs95z37OE/LrbYLAPAgwCsCeCVAN4G4BMAvgTgWwB+BOAu
+        AH8EcB8m4e/8G//HNmxLGcruq77WALC4X2+ejgGwGoAdARwB4GoAfxt6sG3zV12D19oBwBN8PPNkBsCD
+        9UYeDeA2f0Id8BMARwHYkmPz8c7TAgCWBvBqAKcB+Is/gR7xZwCfB/Aqjtk/xzw1AbCO1uHf+Z0eA+4B
+        cCiAp/jnmicAN1oAXgLgPAD/87s6plyuZWt+E1mFdu8LtQufrdwAYLv5L4Kht4M3Jxc83l0J4FIAZwA4
+        SRu3g/TD3/k3/o9trpJMLq4HsIXfhzkHgA0AfM3vzgz4PYCzAXwEwE4ANgawol83FcoC2ER9sc9zAPzB
+        LzoDLgawrl931gNgOb159/sdqQnP/Hxj3wtgIy4jfq0cSCm0u2aMe31QNfmP9Aor+HVmJQA2B3CH34Ua
+        /EM3fisAS3r/pQGwlJawMwH80wdbg58BeKn3P2sAsKyUN0139txJ7wHgYd53XwDwcAB7ArjCB58I782R
+        vFfe91gDYH0AN/mnTeC/WtM38j77jvYf3DM0+cLzJPRU73MskZ6+rn6eD556gA29v3GDDxLAKVrr6/B3
+        ALt6f2MDgCUAHO6fKgG+8Wt6f+MOgLUAfNk/bALUJi7h/fUaAMsDONc/SYTb58LZWJtXbvjq8FUAD/G+
+        egmAxwD4vn+CANzV7z+XLGnaEFOvUOfUcA2AR3tfvQLAqgBu9pEHoEbsyd7PXIGGopoaUG6kH+f99AIA
+        CzSNp3L8XHrrq9BscILfnAC8xwu8n07ht7LGw6c9f0fvY64jI9Gf/GZV8IveeCNpzb/FR1gBvWfW8j7m
+        WQSXwxpeTlwOHuV9FIX66xobPm5iig9Y/gVURNG5k8vOZQB+KifQf+mHv/Nv31CbfQCs14XZtuYmmvd0
+        ee+jCDrnU1mTAg02xY4xeujPB3AigN/6YGpArx6uz88r+WXgvQLwdR9MBdQtlNcT1FDynF7KP06+g28G
+        cKsPogXY55sKfpZlZPRK4VCXz4rs4ynw4Zcy0dJN+5c+gAxwA/Zav34O5CWV+iUoMiYOiuvpcFBFFZz2
+        s78tAFbXtUpzSYnjmGaClOWAMQt5DUjyyb/RrzwCbk6yr/kAttEGrivoBr7Qx9U22hNc6xcfwY+zmpJl
+        z4/Bo1723T6ADzU0tbYNx/BBH1/b6HSQckQ8wmVbQZ48sRvONyLrOV/r4nF+4URokuUMdtYIp1D+jf9r
+        6qZ2bO79DoC1NdWH4DNq17NI5/0UN64dXLZtdKPrQF8E2uPpthV1EJUj6NYATm3gx3C099c2AF7vFx0B
+        rY3LuWxjABzmVxjB8S7XNrIapsJoov0APNT7SYWyAN4nb+NU3u/9tI30GzEOcblGyHU7Ni3SqpfVsKO3
+        MrYEEbahNu8R3kdT2BeAT9W4/pbeR5vIqzq2GedyN/NTQYLfPu35WU26NHwk+uPzTd3K5dtCX8LUcTze
+        5dtEcZMxf4KLXK4WWjdj7O9ybQPgAr/oCH4O4Eku2zYy2KTsh8512bYBcIBfdASvcLkktNuOOSvQgJJ7
+        6mdYeAw+kFVdNhdyfEn5Emztsm2ipYBf/BDXNbJjKFAzRrNvVyIM/NCXLAQVQdnffEdHslhUEHUiWQ01
+        ibP0ti4XRNa0WJTu2S7XNglHHm64tnG5Umh2im0Mszu/JDjgcpOePgvwzfYeDO4ws7tuJyxBn3GZ0gA4
+        2QdlXO8ybaN9Seyk9jKXq0SGjhCfc5m2UWRNCE6/2VXOMeipm+DK9XSXaxulzwmRdiLQ8SI0rTFqZ+bn
+        ywiKkQvxYZfpioTd+GEu0zay0oaeG/8XT1ejnDwhsq/9JLLL5vl3JZfpCs5Eci2r4naXyUFC5NHHXWYK
+        8qiJuVBt7HJto0SPIc5yma5RSFuIEr4DG0ZmAbq4LeVyD5Bw5r7CZXIAYDe/sJF9Z12XBC+pN7hMDpTe
+        JkS1bgLAF721sbvL5ICGDL/wEPyGP9ZlugbAypG37yCXyQGAvfzCxugNvLx9QkkYqfMvkpwhcq69w9v3
+        BQC/8sEOcY63z4EMVyEbAZ/xdO1tgkbpDJfJhRQXVVzi7ftCxHB2nbfPhRJdh5hurQRwjLcypgtlIhI+
+        fbK37wtyIqniNm+fC6WqDTHdbSzib0ZXr+rdY8tETiLHePu+EHmJ7vH2udBpLuQ6dosLMOV6iPOnCGQm
+        kqTxWG/fFyK+ind5+5woqUSISeup8viEeOeU3jMTSSh1qrfvC8oUXsVN3j4nAN7tAzAmA0kS1K5Pm9J7
+        ZiJn2cu8fV8A8G0f7BCXe/ucJNhSDh9uzCoYVdC9Kau7sxNRaRadSusA4G4f7BBFVOgDFLwbCpq5atCQ
+        nj8h9+eiAycK+gixmst0jULUQmQPHnEiLxI3iYuzUUzvXtzqlnCMeaPLdI2ikkNUq2AzkWClXJ2N6Oka
+        YifvODf0qPVBGBe7TNck+FAUT+4EYGcfhLElG7G0Wojs1r9RAPihD2QIer/0I0fOorHyGB3yyCmmBRwG
+        wDN8IMbebBSz/0fDqXIA4AM+EONIl+mKiAKI7OcyJaDtxgdiHMJGDIqsorMdt3LshmAu3dVdrjTaQ9FQ
+        FmJtlysFgN/4YIY4gw1YJbOKK73DkihpU4iiGspRALjQB2Vc6jIlUamcKi5jAyYVqKLTzZZC0mPs6XKl
+        4BrqgxnBi12uJBHT+g1sENK7d+56lZAyjdPvc10uNwA2jdjdyTUuVxoVw6riTjYIuTSf5B2Whg9Xnsgh
+        GLC5vsvmQh64IS0b4Zif7bKlUT2iKu5lA26mqjjKO+wChWbH4APZ1GXbRvkHYw+fHOeyXQDgYB/YEPex
+        Qej8eqB32AWqxRNytxrAKXkfl28DhctRZxJy/x7AVHJF3OdiKC19FffHvgAf9Q67Qtat2HFrALVyrQWM
+        KvQq5O41DGfU3pS64TP0AQ4x8QUILQHTXYc6JEG1OQzfVKZSaZy0il8iAJ8G8G/vPEBx1XmIyB5gYgkI
+        bQJP9A67BsC7fJAR6KrNknOcvtcNRclqmmebt0sm5ObtsG1Rx5kU9AWuYmITGDoGnuYd9gE9zDoPZxia
+        vpk04XwFVH5BSa953Az50YXgWPb1cfYBpeutYuIYGMoDcJ532BcYaRNZvkrBMezi4+sLkfQ6E4qgkCq4
+        SChYU+iqlpBBJCe8dlF3ubpE3esixqC7vcM+oU1aSNOVGyaHyJohbaZEXOwnjEExc3D2pM91kAsbo5hY
+        er3pPqBNOIaL6FxR2ncyhhJdhpgwB7OUSojeTHFKXRNLG9MldGcvFkEVQ+HiISYcQmIxga/xjkujD5Kq
+        iOkDVESt55+jNAC294EZW7BRzCk0e+7bKpQHj4qMPkz1daGGlYmtV/DPVQp6IvugjAWDNTV0/r3QOy4B
+        gGfVKEcXgh4xPOezCPNbtIzQV44KnzX0wwphz5T/wR5MpSI7ehslaJgrsCu/Su5NqmCY+CKlWOSoQE1h
+        sc2NvpCMC6hbbn0Ay9mwzg6zjDRWAw+Qvz/7YuRvSGsagmrp9xS+jwwMYVBvFZPeXhF9MSlia1fV8Viu
+        nVFwieCpgDGO2aZclXnluvqVhl9Quo9lG98wTE3nFzcmM5ep4laIvab0ngGVn415/zi0DrKuX/a0dY5m
+        Bq7xqRbKAUWqgKv4ZYjthxszHXuIM6f03jLKTXinXzQA33hG4nYeIqZaPiw5EzKrO8zFsIb31SYJM+nU
+        QBVtVqqgAaW9EiRDyP07FFTpsHrWJt5P10gtfYUPNgA/c5ajokr8hOwkN7sMhfgtDtG6PoCZK5W7LgXa
+        5BkssqT30xdkTn5rjWWBltjWcy4z9t8vZEyGhg8JbeWtjNNdZiYw1VtCrvsBbNcbL5sYmg1CM+owzIe0
+        svcxE7hk+0WM6Wn+lSYudGygrqCVZUAKnu/5BSqgtbLzpNB1UbFHnhZS4DF8Ge+jCTpJhSq78ig7+lqR
+        FCekFbs3kxV6xxXQ2lYsOVXbqOBFyCNnmM+6fBMA7OodG6e4zAMkxOVf6zJ1UQXuFD5ZUnGSC+0LDvQP
+        V8GM8x4A+IF3alQX1VJ6sdimrHEUjo57oelpAEvUVvrujSNSRcfgMvtEl00FwGbeoUG1eHhGlR48RKPN
+        oFS8oUDFATy/jv2b72gmiFUXITxKNvr8CRlCD3aZaehoFrK+UQVaWwGj41EMbgxb2Wj2Eb59AL7jH3oE
+        tZNyy6gVUkbxmaaFqUesSKRWzKDKqoROGISlXounUSkNgFUiMfuEsY61Tj6RNLUk3aoL4OUubfCblqzF
+        Siw731n1r9IAeGFCwGtyBhTpHWL9pVcU13oVc726wOVGQZNsQmRN9sLTfSOhCjrjHJOW2oQZu37xSADb
+        eS8jeIHLOTzfupBBnXjjCt/jisrUxxxOTnA5hwkoXGgE9WdXzQKhvP2ETpDTiw8IrXexaNrdXG6ukJCj
+        mbNAZXUUavQigT2EJvZ6b/8AuTrHOMDlBiQoQGgbb3TkmQ3oJYv5QFRmGE24v2Rzl6uFPG1C8Fg4zVAj
+        NWhMqVQ8e2bfYEVPvykGLYbTLKAKl495JSXt04LIeTJ2ISZ1XNrkYrPHjY2npllGwlI75S2Wxpb3LwQ3
+        3vFCkSkkaAfJoSYTq0C283D7uQxtAH5zjCk1EujP5w1G0F6VMpkYQ3V8BkzU89PmJORqTqXQsn6duYqc
+        TUN5h+jCPTHDAnid/3MEDFpt9/5SkRBRERMaejZIOJp0XvW7b/Ce+E0yqDzivY0Z0/iM8uQmTHAfJ7cn
+        fJgXed9znYSkmEx3w3sbI1+hak1VsXNnDE5nYZPkHESGoqaBJwOova3Uy7SCTgWhCiMxOs/v21ci2Txi
+        8MVqZ9cfIyGQJMQ7vL95FqHwsSZw3V/o/WUl0cNlFNmzeY4ryj/chLijR9vIw+ccH0kCj/S+5lmECj/X
+        hZHPS3hfRZB+gPr8VHqdc6gP1IyS+m7nHlTy9glV+hyGCYvW8T7mWYScZkNJnYZhnYeVvI9OUGRvyhmV
+        MGZtxu7Psw1p+ELa02Go6VvF++gUphup8SUgLLQ0OkJlDiG1ecw7aBje4wXeTy/QTJC6HBDawjfwfuYK
+        8uWju1YqnPb79eY72hPU2RjSbMmU5nk1WD1CGtWPJZjZh+GGrx9rfgydDkJ1a0fBaNrNvK/ZBv0oAdzq
+        Hz4Cg2W63e3XRUmKmiiLmJ0r2eV8XFCdIZ7Z60ANH0u+jK/bnAJO6xo56OPOTF+N4+T6gsrKMtA1FLUz
+        Cp4IJvP4jDNKA9PEisj9AfP5P8f77DuqdsZ6BLGYiFHQqlfGsFMKJaA4KCGCpQrulnfn/sL77gs60u2S
+        EKJdBad8zhbjtd7XQZ5FKe5lVdCdjG/Wwj58GZSQiWOhDyRNsk2hciePJ0/fUIqYQ2oeg0ZBrSJPG0wB
+        y01WdqOINre81l5KAZOaEKoKLhGcGdv14RsHtDeIxbXVgbMD4xiYJJmhbVS0rOjXTUXhW8y4yb72Vxbw
+        WJRzHegAMrvW+iYogXPTdTMFGliuVqEoni5YiZT+jXzz+MPf+Tf+j23YluHquaAGdGYRO7MNhUltmxAk
+        Mc5wI7vNfEBMBHnGUGkSc0MfF1iDkIU55h98HZSuhlFJdZwk+gKzgHCjm5aWZZ5q5DK9tfILtrkJaxtq
+        PE9R1tVpAZ3ztICULVswhUpLFUVmys3aRHIjO+f9G4oDYFUlRz5cKVdnooyJwb55DQZnsnDErE9qNXbo
+        NMFiDgxP31t7CB7vvikd+68ViDnsfsXf+TfWLGAbtmXNXa7h7IMzDvucdZu4/wP+WChFbOsS4gAAAABJ
+        RU5ErkJggg==
+</value>
+  </data>
+  <data name="TxtSearch.IconRight" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wwAADsMBx2+oZAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAtHSURBVHhe7Z15
+        kB9FFce/73nhjQcWWJaIgCd4oeWJJ+CFV2lQS0XF0kJE8RbUQEpFg2WJoNGK7nbPbqC0IlKoKIhiKYqW
+        CoJHeUSJBhODJJGAmJC4Waw3mVjrm152e6ZnpmemP1Xf/3bfe92/np7p6zUwAFYDdzwXuJcBHrwK2G8S
+        uLv+m0SPmQYemAFHGeBEy/w5S3SJJVpjif5piXZYolvn0VZLtD4j+oVlPtcCSzPgGAs85mzgTtpPIhIs
+        sK8FlhjmlZboL44ftrYyov9Yoiss83IDHCG9iI4j0SIWONgyf6R4sks/WNPKiP5lmVdb4EUrgTvo+BIN
+        ULy332qIfqJ/kI51vWE+KwMO0zEnAjAN3M8CyyzRjY7Kj00/ll7hVoB0ORKeTAD7y5NlibY5Kjp2XZ0B
+        x64GbqfLlVgAGZZlzJ+2RDsdFds3XWmAJ+oyJuZBuk9LtM5RkX3WrGWeNsA+uryJApmUKcbruvIGo4xo
+        kwFer8s+eizw0mKSplRpA9XXLLC3rofRIbNrxUeerqAxaI3MMOo6GQ3TwAGG6JeOihmTtmfAW3TdDJ4J
+        4BCZc3dUyDjFvHw08wYGeEax6FKuiDGLOVsG3F7X16AwwEt6OqnTlr6xGrizrrdBIOP7YkVNFzppjjKi
+        7w5updECh0fy5G+wRD+TSs6HYszn5Ct6RBdZossM0e8W2C/QjpinB/NNYIFDLdENpUI2rIzob4Z5ygBv
+        nAQefw5wDx2bC5m7z4ADDXC0ZT7dEv20i57LMH9Kx9Y7ZGdO8dSVCtiQZGy9dAp4iI6lDvnaBHBMRvTN
+        NtcnMuA9OpbeIJsk5OnRhWpAM5b5K1PAk3UMTVAsTb/PEv3dEUtozcioScfQC6QLcxQomPJumXky9NO+
+        WCywlwVOaGHhaoM0Ou0/aizwgnwFrFyYIJJNm/Je1367QIZtxWaVW3ScoWSIvt+bfQVfAh5gibboQgTS
+        jRY4LsYv5EngoTKScMQcRAY4RfuMknx45ShAXcm6wQRwkPYXE/KUFr3BjI4/gG6RRqZ9RsUU8HxH4LUl
+        2737tC/fAkc21AterH1Fg/xAluiPjqDriXm59tUHpoGHW6JrS+WpqQx4ufYVBUXXVwq4hnb1fam0mAf5
+        vaNslSUTXCuAu2lfnTIF3Cc/KOEIuKoy4B3aTx+ZBO4f/LQScLL20ynFlGk50KoCTtM++ox8vFqi60rl
+        rCjZWzgN3FX76YSVwD2Dru8zW+1jCFjgSUEXmoCTtI9OyIAPlYKrrt+uBO6ifQwFA7zLUeZKkm+BzkdG
+        xZf/9Tq4irrZAI/QPoaETGBZogscZa8kWenUPlpFhiQ6qMqKpUtrmOKDeVOp/NX0Q22/VQK25l8Pfj/c
+        HCxwvKMOqmhWDtRo+62wErhvoI+a2baWcmNhGcCyM8lRF97KgFO1/VawwNt1MFVkiM7XtsdABjxH10UV
+        ZUR/6mRxTN4/OphKAp6gbY+FYBtm2j5hJEO1QOvfl2jbY6I4Ca3rxF/Au7XtRpEMXKUgKkjOCWjbY6IY
+        Fl6j68VXsldR224Uy/wJHUQFbR7c/vcKZMwfddSNr25qNVFVkC9Y5rO13TGSZzsLsH2utSwk8tSG2Brd
+        292uDWCJfqXrx1vAO7XdRrDAw0rO/fXvzuexI8Iyn+moIy9lzJ/XdhuhOOBZCsBHcjRL2x0zGfBiXUcV
+        dKm22wgZ8H6Hcz8BS7XdMVMsqdf9Dliv7TaCHMZwOPfSFPAybXfsyPKuridPzbaS9Vy6GodzL2XAI7Xd
+        sVOcWC7VlZeAQ7Xd4OSp1LVjP82kD8AylnmFo668ZICnaLvBsUR/0I499Q9tMxFmZ5UBnqvtBifAce8/
+        a5uJQKurwBJtNzgy7Vhy7KertM1E3gDe4KgrPwHHabvBCXDu7XJtM5E3gCWOuvJSK2cpZPOmduypK7XN
+        RP4NcKyjrvwEHK/tBscSbSw59tMabTORN4C3OerKS60kog5wR89GbTORvwJOdtSVlySPkbYbHOnCtWNP
+        7RjTDuDFUlyQoevKT8DztN3gWKIflBz7CjhY2x07luhbpXryVSszgcyrSo49lQEv1HbHToitYRPAvbXd
+        4Bjgw9qxrwzwXm13zOSJpuoPr7e1sj08v0q17NxXF2i7YybQGYF2JtgmgUc7nPtqa2/SnrWAYf6Yo468
+        JGlxtd1GKLqrXToAX8WS5y8GQtyE2uprNSP6jQ7AW8yna7tjpEghU/f9Lw3gCG27MWRLtw6ggtbJIUlt
+        e2wUeYd13fhqZ6spY2RLlyMIfwHP1LbHRpAt4W0vsMkt3iG+Ayzzl7XtMSHH4kt1UkEZ88e17caxRFfo
+        QCpoZsyzgpboQkedeCsDnqptN45s7daBVBLzhLY9BuRId4Ct4KL1nXxLWeBBgQqwI/okyA0QZO5/d/f/
+        WW27NYIsDI3wpFCI01V71En3v4cMeJMOqKoM8Eptf4gUE2lrdfmrSG450/ZbRW7ikoOeOrCKus4C+2of
+        Q0O6bEfZK8kAJ2r7rWOZP6MDq6FLh7xGEDKvoiTnljOF2kfrFFfEhMgXtFt5FrXhIXcRBr0/kfmT2kdn
+        WOYvlgKsrlnZI6999Jkip2LIewO2rwL20346Q7JVBr5dc6dcP6P99BG53CFISp25Yj5T++kcudenFGg9
+        3SwbJbSfPlH8+N9zlK2ObjDAPtpX58h+tICZw/dohwVepX31AUkKHWKdv6SYk2qHnBeYo12SZ1/7ipni
+        DsG65ydKknF/q+ngfCkSH16uAw+k86IY9ixABrwm9P1Jc7RWLqLSPqNiCnhU0GHh/+uaSeBp2mcMWGDv
+        EOlzFqH4G4HMUDkCD6VZyzwd04XKxcneYJdCLULrpoEDdBxRkRF91RF4SG2RjGWtJEaaBwM8OyP6kSO2
+        NhR3T1CkPqt92mUR2iLXzLU1NJK1dwMc3eC3jo/ibgQZcFiAfAKL1U5D9HUDvMICe+lY6jIBHCLTr7IB
+        w+G7S8XdCIoLpWvnFvaUrFB+R45cSxJl3x2z8pTLO9YAr82YTfCbP8Mr7kZggdcF2j1UR9fmufiYJw3z
+        Wfltp8AHZGubYT5DZjKL7xbZpbvd8f+xK+5G0PDIIGm34h4dWOCDEfQEQ1fcPYEkQwq8cphUVvQ9gVyW
+        tM0ReFI4xd0IZEo3QMaxpNtW3K8DmbyxRBc7Ak8Kp7h7gnwFUYZjAY5IJ82ruBuBMAU8SxJJO4IfknZK
+        NpBid3BTK6bzKe7XgZDfSLa7N+jjRMxCukqmxveUVXL6dVDO+HsCYQI4yBJd5ChAH7XBAm92nXeQdHmp
+        J7gNLHBkqPOHHWirTHzJPcu6XHNJjWARyAFIuR+3J7OIG+Vwi0/SxvQ6WCRTwGMlP1FGtMlRoC4lDfMy
+        A7y66qbN1BN4IJVcXLZ4XgeV9j9JtjQDnDIB7K9jrEJqBBWQtX65LMkyL7dEP294PmGLZV4tH3WSIEPH
+        EoLUCGoiW9HyBgGcJPfpysmcCpcybpWnW747JAGTbPqUw52t5OJNjaAZJDGDTD3LOUYDPC4Dni4fX5Jg
+        0QKHyxhdDnRIzgP9v12QGkEijQ4SqREkUiNICKkRJDr7MBxD8q7e0EVPIHkO0o3vEdFJTwCcpuNIdEgH
+        jeAmSXal40h0SOuvA+AEHUOiY1ruCS7U/hMR0GJPsFb7TkRCSz3BNu03EREt9ASbtc9EZDTZE8gSufaX
+        iJDGegLmFdpXIlKa6AmGkr95NATuCa7u5HKqRD0C9QQzcnRP2070hLo9geRj1DYTPaM4fLtZ/7gLaDYD
+        Tm1rM2yiYfINsUTfdvzQLq2R14e2kRgAeXYW5i9Yor+qH32rITpf0vpVPeGU6BlyJF8u/lpsMs3/ArKe
+        RqJVuNbbAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
